# scene

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: constants.py  deps.py  enums.py  logger.py  main.py  schemas.py
app/db/: Dockerfile  __init__.py  model.py  types.py
app/helpers/: constants.py  deps.py  enums.py  logger.py  presence.py
app/routers/: auth.py  image.py
app/worker/: detect.py  queue.py  thumb.py  vector.py
migrations/: env.py
migrations/versions/: 0fb3cc4bfbd9_add_image_hash.py  832ac61bb210_add_user_model.py  874209ab88a2_make_image_hash_unique.py  9d9729b2102b_add_attempts_to_serviceq.py  a1b2c3d4e5f6_add_uploaded_by_to_image.py  b2c3d4e5f6a7_add_role_to_user.py  d72f3bc62ce7_initial.py  e4fe780de05f_embeddings_and_cascade_delete.py
scripts/: backfill_image_hash.py
www/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
www/src/: app.tsx  auth-context.ts  auth-context.tsx  auth-provider.tsx  index.css  main.tsx  outlet-context.ts  use-auth.ts
www/src/api/: client.ts  types.ts
www/src/components/: icons.tsx  image-card.tsx  image-preview.tsx  modal.tsx  neo-badge.tsx  neo-button.tsx  neo-card.tsx  neo-input.tsx  neo-tag.tsx  page-size-select.tsx  pagination.tsx  require-auth.tsx  toast.tsx  use-toast.ts  user-avatar.tsx
www/src/hooks/: use-upload-queue.ts
www/src/pages/: gallery-page.tsx  landing-page.tsx  login-page.tsx  not-found-page.tsx  search-page.tsx  similar-page.tsx  upload-page.tsx
